src/objects/Astrum_Daily_Report__c.object
<CustomObject>
    <fields>
        <fullName>Current_Backlog_KW__c</fullName>
        <label>Current Backlog KW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Actual_Cancel_KW_Num__c</fullName>
        <label>Daily Actual Cancel KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Actual_Cancel_Num__c</fullName>
        <label>Daily Actual Cancel Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Actual_Inspection_KW_Num__c</fullName>
        <label>Daily Actual Inspection KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Actual_Inspection_Num__c</fullName>
        <label>Daily Actual Inspection Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Actual_Leads_Num__c</fullName>
        <label>Daily Actual Leads Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Actual_Oppty_Num__c</fullName>
        <label>Daily Actual Oppty Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Actual_Sales_KW_Num__c</fullName>
        <label>Daily Actual Sales KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Actual_Sales_Num__c</fullName>
        <label>Daily Actual Sales Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Avg_Time_Opty_to_Sales_Visit__c</fullName>
        <label>Daily Avg Time Opty to Sales Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Avg_Time_Sales_to_Inspection__c</fullName>
        <label>Daily Avg Time Sales to Inspection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Goal_Avg_Time_Opty_to_Sales_Visit__c</fullName>
        <label>Daily Goal Avg Time Opty to Sales Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Goal_Avg_Time_Sales_to_Inspection__c</fullName>
        <label>Daily Goal Avg Time Sales to Inspection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Goal_Cancel_KW_Num__c</fullName>
        <label>Daily Goal Cancel KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Goal_Cancel_Num__c</fullName>
        <label>Daily Goal Cancel Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Goal_Inspection_KW_Num__c</fullName>
        <label>Daily Goal Inspection KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Goal_Inspection_Num__c</fullName>
        <label>Daily Goal Inspection Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Goal_Leads_Num__c</fullName>
        <label>Daily Goal Leads Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Goal_Oppty_Num__c</fullName>
        <label>Daily Goal Oppty Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Goal_Sales_KW_Num__c</fullName>
        <label>Daily Goal Sales KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Goal_Sales_Num__c</fullName>
        <label>Daily Goal Sales Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Stretch_Goal_Avg_Time_to_Ins__c</fullName>
        <label>Daily Stretch Goal Avg Time to Ins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Stretch_Goal_Avg_Time_to_Sales__c</fullName>
        <label>Daily Stretch Goal Avg Time To Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Stretch_Goal_Leads_Num__c</fullName>
        <label>Daily Stretch Goal Leads Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Stretch_Goal_Oppty_Num__c</fullName>
        <label>Daily Stretch Goal Oppty Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Stretch_Goal_Sales_Num__c</fullName>
        <label>Daily Stretch Goal Sales Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Stretch_Goal_Sales_kw_Num__c</fullName>
        <label>Daily Stretch Goal Sales kw Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Stretch_Goal_cancel_Num__c</fullName>
        <label>Daily Stretch Goal cancel Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Stretch_Goal_cancel_kw_Num__c</fullName>
        <label>Daily Stretch Goal cancel kw Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Stretch_Goal_inspection_Num__c</fullName>
        <label>Daily Stretch Goal inspection Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Stretch_Goal_inspection_kw_Num__c</fullName>
        <label>Daily Stretch Goal inspection kw Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_End_Date__c</fullName>
        <label>Month End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_Goal_Avg_Time_Opty_to_Sales_Visit__c</fullName>
        <label>Month Goal Avg Time Opty to Sales Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Goal_Avg_Time_Sales_to_Inspection__c</fullName>
        <label>Month Goal Avg Time Sales to Inspection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Start_Date__c</fullName>
        <label>Month Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_Stretch_Goal_Avg_Time_to_Ins__c</fullName>
        <label>Month Stretch Goal Avg Time to Ins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Stretch_Goal_Avg_Time_to_Sales__c</fullName>
        <label>Month Stretch Goal Avg Time to Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Actual_Cancel_KW_Num__c</fullName>
        <label>Monthly Actual Cancel KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Actual_Cancel_Num__c</fullName>
        <label>Monthly Actual Cancel Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Actual_Inspection_KW_Num__c</fullName>
        <label>Monthly Actual Inspection KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Actual_Inspection_Num__c</fullName>
        <label>Monthly Actual Inspection Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Actual_Leads_Num__c</fullName>
        <label>Monthly Actual Leads Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Actual_Oppty_Num__c</fullName>
        <label>Monthly Actual Oppty Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Actual_Sales_KW_Num__c</fullName>
        <label>Monthly Actual Sales KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Actual_Sales_Num__c</fullName>
        <label>Monthly Actual Sales Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Avg_Time_Opty_to_Sales_Visit__c</fullName>
        <label>Monthly Avg Time Opty to Sales Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Avg_Time_Sales_to_Inspection__c</fullName>
        <label>Monthly Avg Time Sales to Inspection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Goal_Cancel_KW_Num__c</fullName>
        <label>Monthly Goal Cancel KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Goal_Cancel_Num__c</fullName>
        <label>Monthly Goal Cancel Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Goal_Inspection_KW_Num__c</fullName>
        <label>Monthly Goal Inspection KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Goal_Inspection_Num__c</fullName>
        <label>Monthly Goal Inspection Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Goal_Leads_Num__c</fullName>
        <label>Monthly Goal Leads Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Goal_Oppty_Num__c</fullName>
        <label>Monthly Goal Oppty Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Goal_Sales_KW_Num__c</fullName>
        <label>Monthly Goal Sales KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Goal_Sales_Num__c</fullName>
        <label>Monthly Goal Sales Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Stretch_Goal_Leads_Num__c</fullName>
        <label>Monthly Stretch Goal Leads Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Stretch_Goal_Oppty_Num__c</fullName>
        <label>Monthly Stretch Goal Oppty Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Stretch_Goal_Sales_Num__c</fullName>
        <label>Monthly Stretch Goal Sales Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Stretch_Goal_Sales_kw_Num__c</fullName>
        <label>Monthly Stretch Goal Sales kw Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Stretch_Goal_cancel_Num__c</fullName>
        <label>Monthly Stretch Goal cancel Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Stretch_Goal_cancel_kw_Num__c</fullName>
        <label>Monthly Stretch Goal cancel kw Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Stretch_Goal_inspection_Num__c</fullName>
        <label>Monthly Stretch Goal inspection Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Stretch_Goal_inspection_kw_Num__c</fullName>
        <label>Monthly Stretch Goal inspection kw Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_End_Date__c</fullName>
        <label>Year End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_Start_Date__c</fullName>
        <label>Year Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_Stretch_Goal_Avg_Time_to_Ins__c</fullName>
        <label>Year Stretch Goal Avg Time to Ins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Stretch_Goal_Avg_Time_to_Sales__c</fullName>
        <label>Year Stretch Goal Avg Time to Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Actual_Cancel_KW_Num__c</fullName>
        <label>Yearly Actual Cancel KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Actual_Cancel_Num__c</fullName>
        <label>Yearly Actual Cancel Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Actual_Inspection_KW_Num__c</fullName>
        <label>Yearly Actual Inspection KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Actual_Inspection_Num__c</fullName>
        <label>Yearly Actual Inspection Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Actual_Leads_Num_1H__c</fullName>
        <description>1H Actual Leads Count</description>
        <inlineHelpText>1H Actual Leads Count</inlineHelpText>
        <label>Yearly Actual Leads Num 1H</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Actual_Leads_Num_2H__c</fullName>
        <description>2H Actual Leads Count</description>
        <inlineHelpText>2H Actual Leads Count</inlineHelpText>
        <label>Yearly Actual Leads Num 2H</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Actual_Leads_Num_Total__c</fullName>
        <formula>Yearly_Actual_Leads_Num_1H__c + Yearly_Actual_Leads_Num_2H__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly Actual Leads Num Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Actual_Leads_Num__c</fullName>
        <label>Yearly Actual Leads Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Actual_Oppty_Num__c</fullName>
        <label>Yearly Actual Oppty Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Actual_Sales_KW_Num__c</fullName>
        <label>Yearly Actual Sales KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Actual_Sales_Num__c</fullName>
        <label>Yearly Actual Sales Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Avg_Time_Opty_to_Sales_Visit__c</fullName>
        <label>Yearly Avg Time Opty to Sales Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Avg_Time_Sales_to_Inspection__c</fullName>
        <label>Yearly Avg Time Sales to Inspection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Goal_Avg_Time_Opty_to_Sales_Visit__c</fullName>
        <label>Yearly Goal Avg Time Opty to Sales Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Goal_Avg_Time_Sales_to_Inspection__c</fullName>
        <label>Yearly Goal Avg Time Sales to Inspection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Goal_Cancel_KW_Num__c</fullName>
        <label>Yearly Goal Cancel KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Goal_Cancel_Num__c</fullName>
        <label>Yearly Goal Cancel Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Goal_Inspection_KW_Num__c</fullName>
        <label>Yearly Goal Inspection KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Goal_Inspection_Num__c</fullName>
        <label>Yearly Goal Inspection Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Goal_Leads_Num__c</fullName>
        <label>Yearly Goal Leads Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Goal_Oppty_Num__c</fullName>
        <label>Yearly Goal Oppty Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Goal_Sales_KW_Num__c</fullName>
        <label>Yearly Goal Sales KW Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Goal_Sales_Num__c</fullName>
        <label>Yearly Goal Sales Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Stretch_Goal_Leads_Num__c</fullName>
        <label>Yearly Stretch Goal Leads Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Stretch_Goal_Oppty_Num__c</fullName>
        <label>Yearly Stretch Goal Oppty Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Stretch_Goal_Sales_Num__c</fullName>
        <label>Yearly Stretch Goal Sales Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Stretch_Goal_Sales_kw_Num__c</fullName>
        <label>Yearly Stretch Goal Sales kw Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Stretch_Goal_cancel_Num__c</fullName>
        <label>Yearly Stretch Goal_cancel Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Stretch_Goal_cancel_kw_Num__c</fullName>
        <label>Yearly Stretch Goal cancel kw Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Stretch_Goal_inspection_Num__c</fullName>
        <label>Yearly Stretch Goal inspection Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Stretch_Goal_inspection_kw_Num__c</fullName>
        <label>Yearly Stretch Goal inspection kw Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Astrum Daily Report</label>
    <nameField>
        <displayFormat>ADR-{000000}</displayFormat>
        <label>Astrum Daily Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Astrum Daily Report</pluralLabel>
    <recordTypes>
        <fullName>Actual</fullName>
        <active>true</active>
        <description>Record Type for Daily Report Values</description>
        <label>Actual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Goal</fullName>
        <active>true</active>
        <description>Record Type for Storing Goals</description>
        <label>Goal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>